  result of this.
- Added support for Python 2.4
- Added batch emitting support for handlers which now makes it possible
  to use the :class:`logbook.more.FingersCrossedHandler` with the
  :class:`logbook.MailHandler`.
- Moved the :class:`~logbook.FingersCrossedHandler` handler into the
  base package.  The old location stays importable for a few releases.

Version 0.2.1
-------------

Bugfix release, Released on September 22nd.

- Fixes Python 2.5 compatibility.

Version 0.2
-----------

Released on September 21st.  Codename "Walls of Text"

- Implemented default with statement for handlers which is an
  alias for `threadbound`.
- `applicationbound` and `threadbound` return the handler now.
- Implemented channel recording on the log records.
- The :class:`logbook.more.FingersCrossedHandler` now is set to
  `ERROR` by default and has the ability to create new loggers
  from a factory function.
- Implemented maximum buffer size for the
  :class:`logbook.more.FingersCrossedHandler` as well as a lock
  for thread safety.
- Added ability to filter for context.
- Moved bubbling flags and filters to the handler object.
- Moved context processors on their own stack.
- Removed the `iter_context_handlers` function.
- Renamed `NestedHandlerSetup` to :class:`~logbook.NestedSetup`
  because it can now also configure processors.
- Added the :class:`logbook.Processor` class.
- There is no difference between logger attached handlers and
  context specific handlers any more.
- Added a function to redirect warnings to logbook
  (:func:`logbook.compat.redirected_warnings`).
- Fixed and improved :class:`logbook.LoggerGroup`.
- The :class:`logbook.TestHandler` now keeps the record open
  for further inspection.
- The traceback is now removed from a log record when the record
  is closed.  The formatted traceback is a cached property
  instead of a function.
- Added ticketing handlers that send logs directly into a database.
- Added MongoDB backend for ticketing handlers